# MatrixPoll

./: .gitignore  .gitmodules  Application.hs  Foundation.hs  Import.hs  LICENSE  MatrixPoll.cabal  Model.hs  Settings.hs  devel.hs  stack.yaml
.git.bak/: COMMIT_EDITMSG  config  index
.git.bak/logs/: HEAD
.git.bak/modules/lib/yesod-auth-token/: config  index  packed-refs
.git.bak/modules/lib/yesod-auth-token/logs/refs/heads/: master
.git.bak/modules/lib/yesod-auth-token/refs/heads/: master
.git.bak/refs/heads/: master
Handler/: Common.hs  Home.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  sqlite.yml  test-settings.yml
deploy/: Procfile
messages/: en.msg
templates/: default-layout-wrapper.hamlet  homepage.hamlet  homepage.julius  homepage.lucius  see_poll.hamlet  see_poll.julius  see_poll.lucius
